# ByunJR

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: BaseLocation.cpp  BaseLocation.h  BaseLocationManager.cpp  BaseLocationManager.h  BotAssert.cpp  BotAssert.h  BotConfig.cpp  BotConfig.h  BuildOrder.cpp  BuildOrderQueue.cpp  BuildOrderQueue.h  Building.h  BuildingManager.cpp  BuildingManager.h  BuildingPlacer.cpp  BuildingPlacer.h  ByunJRBot.cpp  ByunJRBot.h  CCBot.cpp  CCBot.h  CombatCommander.cpp  CombatCommander.h  Common.h  DistanceMap.cpp  DistanceMap.h  GameCommander.cpp  GameCommander.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  InformationManager.cpp  InformationManager.h  Ladder.h  MapTools.cpp  MapTools.h  MeleeManager.cpp  MeleeManager.h  Micro.cpp  Micro.h  MicroManager.cpp  MicroManager.h  (+24 more)
src/TechLab/: InformationManager.cpp  LICENSE  README.md
src/TechLab/information/: BaseLocation.cpp  BaseLocationManager.cpp  MapTools.cpp  UnitData.cpp  UnitData.h  UnitInfo.h  UnitInfoManager.cpp  UnitInfoManager.h
src/TechLab/util/: Debug.cpp  Debug.h  DistanceMap.cpp  DistanceMap.h  JSONTools.cpp  JSONTools.h  Util.cpp
src/ai/: GeneticAlgorithm.cpp  GeneticAlgorithm.h  Pathfinding.cpp  Pathfinding.h
src/common/: BotAssert.cpp  BotAssert.h  Common.h
src/global/: BaseLocationManager.cpp  BaseLocationManager.h  BotConfig.cpp  BotConfig.h  Debug.cpp  Debug.h  MapTools.cpp  StrategyManager.cpp  StrategyManager.h  UnitInfoManager.cpp  WorkerManager.cpp  WorkerManager.h
src/information/: BaseLocation.cpp  BaseLocation.h  BaseLocationManager.cpp  BaseLocationManager.h  MapTools.cpp  MapTools.h  ProxyTrainingData.cpp  ProxyTrainingData.h  UnitData.cpp  UnitData.h  UnitInfo.h  UnitInfoManager.cpp  UnitInfoManager.h  WorkerData.cpp  WorkerData.h
src/macro/: BaseLocation.cpp  BaseLocation.h  BuildOrder.cpp  BuildOrder.h  BuildOrderQueue.cpp  BuildOrderQueue.h  Building.cpp  Building.h  BuildingData.h  BuildingManager.cpp  BuildingManager.h  BuildingPlacer.cpp  BuildingPlacer.h  ProductionManager.cpp  ProductionManager.h  WorkerData.cpp  WorkerManager.cpp  WorkerManager.h
src/micro/: CombatCommander.cpp  CombatCommander.h  CombatMicroManager.cpp  CombatMicroManager.h  MeleeManager.cpp  MeleeManager.h  Micro.cpp  Micro.h  MicroManager.cpp  MicroManager.h  ProxyManager.cpp  ProxyManager.h  ProxyTrainingData.cpp  ProxyTrainingData.h  RangedManager.cpp  RangedManager.h  ScoutManager.cpp  ScoutManager.h  Squad.cpp  Squad.h  SquadData.cpp  SquadData.h  SquadOrder.cpp  SquadOrder.h
src/util/: Debug.cpp  Debug.h  DistanceMap.cpp  DistanceMap.h  JSONTools.cpp  JSONTools.h  MapTools.cpp  MapTools.h  Timer.hpp  UnitData.cpp  UnitData.h  Util.cpp  Util.h
vs/: ByunJR.sln  ByunJR.vcxproj  ByunJR.vcxproj.filters
